--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,12 @@
     </head>
     <body class="body">
         <div class="container-fluid">
-            <h1>Luke Secomb</h1>
+            <div class="row">
+                <h1>Luke Secomb</h1>
+                <h2>Think | Design | Develop</h2>
+                <h3>New Website Coming Soon</h3>
+            </div>
+            
         </div>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
