--- a/app/index.html
+++ b/app/index.html
@@ -23,9 +23,16 @@
     <body class="body">
         <div class="container-fluid">
             <div class="row">
-                <h1>Luke Secomb</h1>
-                <h2>Think | Design | Develop</h2>
-                <h3>New Website Coming Soon</h3>
+                <div>
+                    <img src="img/luke-secomb-digital-logo.svg">
+                    <ul>
+                        <a href="https://github.com/lukethacoder" target="_blank" rel="noopener noreferrer"><li data-hover="Github">Github</li></a>
+                        <a href="https://www.fb.com/lukesecombdigital" target="_blank" rel="noopener noreferrer"><li data-hover="Facebook">Facebook</li></a>
+                        <a href="https://www.instagram.com/luke_secomb_digital/" target="_blank" rel="noopener noreferrer"><li data-hover="Instagram">Instagram</li></a>
+                        <a href="https://www.linkedin.com/in/luke-secomb/" target="_blank" rel="noopener noreferrer"><li data-hover="LinkedIn">LinkedIn</li></a>
+                        <a href="https://500px.com/lukesecomb" target="_blank" rel="noopener noreferrer"><li data-hover="500px">500px</li></a>                        
+                    </ul>
+                </div>
             </div>
             
         </div>
